# Fraud-Detection-System

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
athena/: alert_triage.sql  fraud_heatmap.sql  fraud_kpis.sql
bi/: powerbi_measures.md
frontend/: index.html
lambda/: fraud_alert_handler.py
src/fraud_detection/: __init__.py  alerting.py  config.py  dashboard_api.py  features.py  kafka_compat.py  kafka_producer.py  model.py  olist_data.py  producer.py  spark_streaming_job.py  synthetic_data.py  train_model.py
tests/: test_features.py  test_model.py
